# autovpa

./: BUILD.bazel  MODULE.bazel  requirements.in  requirements_lock.txt  vpa_operator.py  vpa_operator_cr_example.yaml  vpa_operator_crd.yaml  vpa_operator_deployment.yaml
.github/workflows/: push.yaml
