load("@rules_img//img:image.bzl", "image_index", "image_manifest")
load("@rules_img//img:layer.bzl", "image_layer")
load("@rules_img//img:push.bzl", "image_push")
load("@rules_python//python:defs.bzl", "py_binary")
load("@rules_python//python:pip.bzl", "compile_pip_requirements")

py_binary(
    name = "vpa_operator",
    srcs = ["vpa_operator.py"],
    deps = [
        "@pip//kopf",
        "@pip//kubernetes",
    ],
)

image_push(
    name = "push",
    image = "index",
    registry = "ghcr.io",
    repository = "rpwoodbu/autovpa",
    tag = "latest",
)

image_index(
    name = "index",
    manifests = [":manifest"],
    platforms = [
        "//platform:linux_arm64",
        "//platform:linux_amd64",
    ],
)

image_manifest(
    name = "manifest",
    base = "@python_img",
    entrypoint = ["/vpa_operator"],
    layers = [":app_layer"],
)

image_layer(
    name = "app_layer",
    srcs = {
        "/vpa_operator": ":vpa_operator",
    },
)

compile_pip_requirements(
    name = "requirements",
    src = "requirements.in",
    requirements_txt = "requirements_lock.txt",
)
