bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "rules_img", version = "0.3.7")
bazel_dep(name = "rules_python", version = "1.9.0")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    python_version = "3.14.2",
    is_default = True,
)

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "pip",
    python_version = "3.14.2",
    requirements_lock = "//:requirements_lock.txt",
)
use_repo(pip, "pip")

pull = use_repo_rule("@rules_img//img:pull.bzl", "pull")
pull(
    name = "python_img",
    digest = "sha256:1a3c6dbfd2173971abba880c3cc2ec4643690901f6ad6742d0827bae6cefc925",
    registry = "index.docker.io",
    repository = "library/python",
    tag = "3.14.2-slim",
)
